--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceCompatibility = 1.8
 jar {
 
     manifest {
-        attributes('Main-Class': 'org.molgenis.asterix.StarAlleleToPhenotype')
+        attributes('Main-Class': 'org.molgenis.asterix.AppStarter')
     }
 
     from {
