- created pipeline object to store contain logic of the pipeline order - moved app starter to pipeline package - reordered methods in StarAlleleToPhenotype

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ sourceCompatibility = 1.8
 jar {
 
     manifest {
-        attributes('Main-Class': 'org.molgenis.asterix.AppStarter')
+        attributes('Main-Class': 'org.molgenis.asterix.pipeline.AppStarter')
     }
 
     from {
