--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    compileOnly group: 'org.apache.spark', name: 'spark-mllib_2.12', version: '3.1.1'
 }
