--- a/src/main/python/cnvcaller/conf/config.yml
+++ b/src/main/python/cnvcaller/conf/config.yml
@@ -1,5 +1,5 @@
 base:
-  - value: "R"
+  value: "R"
 batch correction:
-  - pca_scale: true
-  - fit_intercept: false
+  pca_scale: true
+  fit_intercept: false
