--- a/src/main/python/cnvcaller/conf/config.yml
+++ b/src/main/python/cnvcaller/conf/config.yml
@@ -1,5 +1,5 @@
 base:
   value: "R"
 batch correction:
-  pca_scale: true
-  fit_intercept: false
+  pca_scaling: true
+  regression_fit_intercept: false
