Moved pca parameters to config.yml

--- a/src/main/python/cnvcaller/conf/config.yml
+++ b/src/main/python/cnvcaller/conf/config.yml
@@ -2,4 +2,6 @@ base:
   value: "R"
 batch correction:
   pca_scaling: true
+  pca_n_components: 100
+  pca_over_samples: true
   regression_fit_intercept: true
