--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,20 @@
 plugins {
-    id 'java'
-}
-
-group 'org.molgenis.asterix.'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
-
-jar {
-
-    manifest {
-        attributes('Main-Class': 'org.molgenis.asterix.pipeline.AppStarter')
-    }
-
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-
+    id 'application'
 }
 
 repositories {
     mavenCentral()
+    flatDir { dir 'lib' }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
-    // https://mvnrepository.com/artifact/commons-cli/commons-cli
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    testImplementation 'junit:junit:4.13.2'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation name: 'Genotype-IO-1.0.6-SNAPSHOT'
+}
+
+application {
+    mainClass = 'org.molgenis.asterix.pipeline.AppStarter'
+    version='0.1-SNAPSHOT'
 }
