Completed proper fit / call methodology for intensity correction

--- a/src/main/python/cnvcaller/conf/config.yml
+++ b/src/main/python/cnvcaller/conf/config.yml
@@ -4,4 +4,4 @@ batch correction:
   pca_scaling: true
   pca_n_components: 100
   pca_over_samples: true
-  regression_fit_intercept: true
+  regression_fit_intercept: false
