--- a/src/main/python/cnvcaller/conf/config.yml
+++ b/src/main/python/cnvcaller/conf/config.yml
@@ -5,3 +5,9 @@ batch correction:
   pca_n_components: 100
   pca_over_samples: true
   regression_fit_intercept: true
+naive clustering:
+  - [22, 42525043, 42525045]
+dimensionality reduction:
+  "/groups/umcg-wijmenga/tmp01/projects/pgx-pipeline/tools/PGx-passport-pilot/data/cyp2d6/configuration_bed_files/unique_positions.bed"
+clustering ranges:
+  "/groups/umcg-wijmenga/tmp01/projects/pgx-pipeline/tools/PGx-passport-pilot/data/cyp2d6/configuration_bed_files/cyp2d6_extended.bed"
