--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java'
     id 'application'
 }
 
@@ -17,4 +18,16 @@ dependencies {
 application {
     mainClass = 'org.molgenis.asterix.pipeline.AppStarter'
     version='0.1-SNAPSHOT'
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from {
+        (configurations.runtimeClasspath).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    manifest {
+        attributes 'Main-Class': 'org.molgenis.asterix.pipeline.AppStarter'
+    }
 }
