--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.testng:testng:7.1.0'
     testImplementation 'junit:junit:4.13.2'
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
@@ -17,7 +16,7 @@ dependencies {
 }
 
 application {
-    mainClass = 'org.molgenis.asterix.pipeline.StarAlleleChecker'
+    mainClass = 'org.molgenis.asterix.pipeline.AppStarter'
     version='0.1-SNAPSHOT'
 }
 
@@ -29,6 +28,6 @@ jar {
         }
     }
     manifest {
-        attributes 'Main-Class': 'org.molgenis.asterix.utils.StarAlleleChecker'
+        attributes 'Main-Class': 'org.molgenis.asterix.pipeline.AppStarter'
     }
 }
